--- a/package.json
+++ b/package.json
@@ -5,12 +5,46 @@
     "main": "index.js",
     "repository": "https://github.com/NickelousTex/LaunchDarklyLOS.git",
     "keywords": [
-      "LaunchDarkly",
-      "LOS",
-      "Lending",
-      "Lender"
+        "LaunchDarkly",
+        "LOS",
+        "Lending",
+        "Lender"
     ],
+    "scripts": {
+        "start": "webpack --config webpack.config.js && node server/server.js",
+        "server-dev": "nodemon server/server.js",
+        "react-dev": "webpack --config webpack.config.js --watch --mode=development ",
+        "react-prod": "webpack --config webpack.config.js",
+        "uld": "npm i && yarn install"
+    },
+    "dependencies": {
+        "@babel/core": "^7.16.7",
+        "@babel/plugin-proposal-class-properties": "^7.16.7",
+        "@babel/preset-env": "^7.16.7",
+        "@babel/preset-react": "^7.16.7",
+        "@emotion/react": "^11.7.1",
+        "@emotion/styled": "^11.6.0",
+        "@informed-iq/verify-iq-sdk": "^1.12.0",
+        "@mui/icons-material": "^5.2.5",
+        "@mui/material": "^5.2.8",
+        "axios": "^0.24.0",
+        "babel-loader": "^8.2.3",
+        "css-loader": "^6.5.1",
+        "express": "^4.17.2",
+        "launchdarkly-node-client-sdk": "^3.3.0",
+        "material-ui-popup-state": "^2.0.0",
+        "nodemon": "^2.0.15",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "recharts": "^2.1.9",
+        "style-loader": "^3.3.1",
+        "webpack": "^5.65.0",
+        "webpack-cli": "^4.9.1"
+    },
+    "devDependencies": {
+        "@faker-js/faker": "^6.0.0-alpha.6"
+    },
     "author": "Nick Teixeira <nickelousteixeira@gmail.com>",
     "license": "ISC",
     "homepage": "https://github.com/NickelousTex/LaunchDarklyLOS#readme"
-  }
+}
