--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@emotion/react": "^11.7.1",
         "@emotion/styled": "^11.6.0",
         "@informed-iq/verify-iq-sdk": "^1.12.0",
+        "@launchdarkly/node-server-sdk": "^9.8.0",
         "@mui/icons-material": "^5.2.5",
         "@mui/material": "^5.2.8",
         "axios": "^0.24.0",
