--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "axios": "^0.24.0",
         "babel-loader": "^8.2.3",
         "css-loader": "^6.5.1",
+        "dotenv": "^16.5.0",
         "express": "^4.17.2",
         "launchdarkly-node-client-sdk": "^3.3.0",
         "material-ui-popup-state": "^2.0.0",
