--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
         "webpack-cli": "^4.9.1"
     },
     "devDependencies": {
-        "@faker-js/faker": "^6.0.0-alpha.6"
+        "@faker-js/faker": "^6.0.0-alpha.6",
+        "webpack-dev-middleware": "^7.4.2",
+        "webpack-hot-middleware": "^2.26.1"
     },
     "author": "Nick Teixeira <nickelousteixeira@gmail.com>",
     "license": "ISC",
