--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
         "babel-loader": "^8.2.3",
         "css-loader": "^6.5.1",
         "dotenv": "^16.5.0",
+        "dotenv-webpack": "^8.1.0",
         "express": "^4.17.2",
         "launchdarkly-node-client-sdk": "^3.3.0",
+        "launchdarkly-react-client-sdk": "^3.6.1",
         "material-ui-popup-state": "^2.0.0",
         "nodemon": "^2.0.15",
         "react": "^17.0.2",
